FIxes onboarding issue

--- a/src/onboard/styles.scss
+++ b/src/onboard/styles.scss
@@ -10,7 +10,7 @@
 
   @media screen and (max-width: 800px) {
     width: 100vw;
-    height: calc(100vh - 48px);
+    height: 80vh;
     box-sizing: border-box;
     margin-top: 48px;
   }
